--- a/facebook.html
+++ b/facebook.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="estilos/social.css">
 </head>
 <body>
-    <img src="imagens/tela-facebook.jpg" alt="Facebook">
-    <a href="https://www.facebook.com/gustavoguanabara" target="_blank">Acesse</a>
+    <img src="imagens/meu-facebook.jpg" alt="Facebook">
+    <a href="https://www.facebook.com/alex.ryan.31924/" target="_blank">Acesse</a>
 </body>
 </html>
