--- a/linkedin.html
+++ b/linkedin.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YouTube</title>
+    <title>LinkedIn</title>
     <link rel="stylesheet" href="estilos/social.css">
 </head>
 <body>
-    <img src="imagens/tela-youtube.png" alt="">
-    <a href="https://www.youtube.com/c/CursoemV%C3%ADdeo" target="_blank">Acesse</a>
+    <img src="imagens/tela-linkedin.jpg" alt="LinkedIn">
+    <a href="https://www.linkedin.com/in/alex-andrade-2a815b1a6">Acesse</a>
 </body>
 </html>
